Fully Added Kaboskos, the first boss of the mod, his weapon on drop, a ruined village system for him to spawn in, and a death animation.